--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 <body class="text-gray-200">
 
     <!-- Hero Section -->
-    <section class="relative bg-gradient-to-br from-indigo-900 to-purple-900 min-h-screen flex items-center justify-center py-16 px-4 overflow-hidden fade-in-section">
-        <div class="absolute inset-0 bg-dots-pattern opacity-10"></div>
+    <section class="relative min-h-screen flex items-center justify-center py-16 px-4 overflow-hidden fade-in-section" style="background-color: #39086e;">
         <div class="relative container mx-auto text-center z-10 max-w-4xl">
             <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white mb-4 leading-tight drop-shadow-lg">
                 Revolucione Seu Negócio com IA e Automação
@@ -111,7 +110,7 @@
                 </div>
                 <div class="p-8 rounded-3xl shadow-lg border-l-4 border-red-500 transition-transform duration-300 hover:scale-105" style="background-color: #61398b;">
                     <h3 class="text-2xl font-semibold mb-2">⏱️ Demora no Atendimento</h3>
-                    <p class="text-gray-200">Clientes esperam e desistem. Oportunidades perdidas por falta de agilidade.</p>
+                    <p class="text-gray-200">Clientes esperam e desistem. O funil de vendas não está otimizado.</p>
                 </div>
                 <div class="p-8 rounded-3xl shadow-lg border-l-4 border-red-500 transition-transform duration-300 hover:scale-105" style="background-color: #61398b;">
                     <h3 class="text-2xl font-semibold mb-2">💔 Perda de Leads Qualificados</h3>
@@ -198,7 +197,7 @@
                             Implementação completa
                         </li>
                         <li class="flex items-center">
-                            <svg class="h-6 w-6 text-yellow-300 mr-2" fill="currentColor" viewBox="0 0 20 20"><path d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" fill-rule="evenodd"></path></svg>
+                            <svg class="h-6 w-6 text-yellow-300 mr-2" fill="currentColor" viewBox="0 0 20 20"><path d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" fill-rule="evenodd"></path></path></svg>
                             Otimização contínua
                         </li>
                     </ul>
